Fix gap on api pages on banner close

--- a/src/styles/pages/_api.scss
+++ b/src/styles/pages/_api.scss
@@ -130,7 +130,7 @@ $ddpurple: #632ca6;
             background: white;
             position: sticky;
             z-index: 1;
-            top: 95px;
+            top: 94px;
             height: 65px;
         }
 
